--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRUE商城 - 专业感×呼吸感的购物体验</title>
+    <title>息屿商城 - 专业感×呼吸感的购物体验</title>
     <link rel="stylesheet" href="true-styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <meta name="description" content="TRUE电商平台 - 灰蓝色调的专业感设计，3秒内抓住您的注意力">
+    <meta name="description" content="息屿电商平台 - 灰蓝色调的专业感设计，3秒内抓住您的注意力">
 </head>
 <body>
     <!-- 导航栏 -->
